Cansu-Büşra-Orhan 26.04.2025

--- a/templates/announcement_teacher.html
+++ b/templates/announcement_teacher.html
@@ -15,8 +15,8 @@
             <strong> Gradia</strong>
         </div>
         <div class="navigation">
-            <a href="#">About Us</a>
-            <a href="#">Quick Tutorial</a>
+            <a href="{{url_for('about')}}">About Us</a>
+            <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
         </div>
     </div>
     <div class="divider"></div>
