--- a/templates/announcement_view_student.html
+++ b/templates/announcement_view_student.html
@@ -18,8 +18,8 @@
       <strong> Gradia</strong>
         </div>
         <div class="nav-links">
-            <a href="#">About Us</a>
-            <a href="#">Quick Tutorial</a>
+          <a href="{{url_for('about')}}">About Us</a>
+          <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
             <div class="notification-icon">
                 <i class="fas fa-bell" style="font-size: 18px;"></i>
                 <div class="notification-badge">0
