--- a/templates/announcement_view_teacher.html
+++ b/templates/announcement_view_teacher.html
@@ -16,8 +16,8 @@
       <strong>Gradia</strong>
     </div>
     <div class="nav-links">
-      <a href="#">About Us</a>
-      <a href="#">Quick Tutorial</a>
+      <a href="{{url_for('about')}}">About Us</a>
+      <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
     </div>
   </div>
 
