--- a/templates/assignment_creation.html
+++ b/templates/assignment_creation.html
@@ -18,8 +18,8 @@
       <strong class="ms-2">Gradia</strong>
     </div>
     <div class="nav-links">
-      <a href="#">About Us</a>
-      <a href="#">Quick Tutorial</a>
+      <a href="{{url_for('about')}}">About Us</a>
+      <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
     </div>
   </div>
 
