--- a/templates/assignment_student.html
+++ b/templates/assignment_student.html
@@ -54,10 +54,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('quick_tutorial') }}">Quick Tutorial</a>
+                        <a class="nav-link" href="{{ url_for('tutorial') }}">Quick Tutorial</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('about_us') }}">About Us</a>
+                        <a class="nav-link" href="{{ url_for('about') }}">About Us</a>
                     </li>
                 </ul>
             </div>
