--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,10 +14,10 @@
       <strong> Gradia </strong> 
     </div>
     <nav>
-      <a href="/login">Log in</a>
-      <a href="/signup">Sign up</a>
-      <a href="/about">About Us</a>
-      <a href="/tutorial">Quick Tutorial</a>
+      <a href="{{url_for('login')}}">Log in</a>
+      <a href="{{url_for('signup')}}">Sign up</a>
+      <a href="{{url_for('about')}}">About Us</a>
+      <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
     </nav>
   </header>
 
