--- a/templates/profile_student.html
+++ b/templates/profile_student.html
@@ -14,8 +14,8 @@
       <strong>Gradia</strong>
     </div>
     <div class="nav-links">
-      <a href="#">About Us</a>
-      <a href="#">Quick Tutorial</a>
+      <a href="{{url_for('about')}}">About Us</a>
+      <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
       <div class="notification-icon">
         <i class="fas fa-bell" style="font-size: 18px;"></i>
         <div class="notification-badge">0</div>
@@ -30,7 +30,7 @@
         <i class="fas fa-pencil-alt"></i>
       </a>
     </div>
-    <div class="profile-name">Name Surname</div>
+    <div class="profile-name">{{current_user.first_name}} {{current_user.last_name}}</div>
   </div>
 
   <!-- Inside <body> -->
@@ -40,12 +40,12 @@
       <div class="info-card">
         <div class="info-title">
           Mail Address
-          <a href="#" class="edit-button" title="Edit Email">
+          <a href="{{url_for('edit_email')}}" class="edit-button" title="Edit Email">
             <i class="fas fa-pencil-alt"></i>
           </a>
         </div>
         <div class="info-content">
-          mail@mail.com
+          {{current_user.email}}
         </div>
       </div>
     </div>
