--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -15,8 +15,10 @@
       <strong> Gradia</strong>
     </div>
     <div class="nav-links">
+        {% if not current_user %}
         <a href="/login">Log in</a>
         <a href="/signup">Sign up</a>
+        {% endif %}
         <a href="/about">About Us</a>
         <a href="/tutorial">Quick Tutorial</a>
     </div>
