--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -17,10 +17,10 @@
       <strong> Gradia</strong>
     </div>
     <div class="nav-links">
-        <a href="/login">Log in</a>
-        <a href="/signup">Sign up</a>
-        <a href="/about">About Us</a>
-        <a href="/tutorial">Quick Tutorial</a>
+      <a href="{{url_for('login')}}">Log in</a>
+      <a href="{{url_for('signup')}}">Sign up</a>
+      <a href="{{url_for('about')}}">About Us</a>
+      <a href="{{url_for('tutorial')}}">Quick Tutorial</a>
     </div>
   </div>
 
