--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -28,10 +28,10 @@
       <i class="fas fa-user" style="font-size: 40px;"></i>
     </div>
     <div class="profile-info">
-      <h2>Welcome Name Surname!</h2>
+      <h2>Welcome {{current_user.first_name}} {{current_user.last_name}}!</h2>
       <div class="profile-links">
-        <a href="#">Profile</a>
-        <a href="#">Log Out</a>
+        <a href="{{url_for('profile_teacher')}}">Profile</a>
+        <a href="{{url_for('logout')}}">Log Out</a>
       </div>
     </div>
   </div>
@@ -68,7 +68,9 @@
 
       <!-- Add Button -->
       <div class="add-button">
+        <a href = "{{url_for('blockview_teacher')}}">
         <i class="fas fa-plus"></i>
+      </a>
       </div>
     </div>
 
